<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <Button
        android:id="@+id/btnSaveAlarm"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/button"
        android:foreground="@mipmap/ic_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TimePicker
        android:id="@+id/simpleTimePicker"
        android:amPmTextColor="?attr/textcolor"
        android:colorControlNormal="?attr/textcolor"
        android:numbersSelectorColor="?attr/textcolor"
        android:numbersTextColor="?attr/textcolor"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/boxcolor"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleTimePicker"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/text_repeat"
            android:textColor="?attr/textcolor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Monday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Tuesday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Wednesday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Thursday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Friday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Saturday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Sunday"
                android:textColor="?attr/textcolor"
                android:buttonTint="?attr/textcolor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switchVibration"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_vibrate"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/switchFlash"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/text_flash"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

        <Switch
            android:id="@+id/switchBright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_brightness_change"
            android:textColor="?attr/textcolor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonRingtone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:text="@string/text_ringtone"
            android:textColor="?attr/textcolor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/text_snoze"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerSnooze"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/snoze_array" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>