<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <ScrollView
        android:layout_width="342dp"
        android:layout_height="550dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchPhoneTurnOff"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/prevent_phone_off"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switchPreventAppUninstall"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/prevent_app_uninstall"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switchAllowStatistics"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:checked="true"
                android:text="@string/statistics_text"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switchNightMode"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/nightmode_text"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>